# afrim-js

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  preprocessor.rs  translator.rs
tests/: web.rs
