[package]
name = "afrim-js"
version = "0.1.2"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]
edition = "2018"
description = "Afrim engine for javascript."
repository = "https://github.com/pythonbrad/afrim-js"
license = "MIT"
keywords = ["rust", "afrim", "wasm", "ime"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rhai", "strsim"]
strsim = ["afrim-translator/strsim"]
rhai = ["afrim-translator/rhai-wasm"]

[dependencies]
wasm-bindgen = "0.2.88"
afrim-preprocessor = { version = "0.5.1", default-features = false }
serde-wasm-bindgen = "0.6.1"
afrim-translator = { version = "0.1.2", default-features = false }
indexmap = { version = "2.1.0", features = ["serde"] }
toml = "0.8.8"
serde_json = "1.0.108"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size
