[package]
name = "afrim-js"
version = "0.1.2"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]
edition = "2018"
description = "Afrim engine for javascript."
repository = "https://github.com/pythonbrad/afrim-js"
license = "MIT"
keywords = ["rust", "ime", "keyboard"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rhai", "strsim"]
strsim = ["afrim-translator/strsim"]
rhai = ["afrim-translator/rhai-wasm"]

[dependencies]
wasm-bindgen = "0.2.88"
afrim-preprocessor = { version = "0.6.0", default-features = false, features = ["serde"] }
serde-wasm-bindgen = "0.6.1"
afrim-translator = { version = "0.1.4", default-features = false, features = ["serde"] }
indexmap = { version = "2.1.0", features = ["serde"] }
toml = "0.8.10"
serde_json = "1.0.114"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size
