[package]
name = "afrim-js"
version = "0.3.0"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]
edition = "2018"
description = "Afrim engine for javascript."
repository = "https://github.com/pythonbrad/afrim-js"
license = "MIT"
keywords = ["rust", "ime", "keyboard"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rhai", "strsim"]
strsim = ["afrim-translator/strsim"]
rhai = ["afrim-translator/rhai-wasm"]

[dependencies]
wasm-bindgen = "0.2.92"
afrim-preprocessor = { version = "0.6.1", default-features = false, features = ["serde"], git = "https://github.com/pythonbrad/afrim", rev = "5f40469" }
serde-wasm-bindgen = "0.6.5"
afrim-translator = { version = "0.2.1", default-features = false, features = ["serde"], git = "https://github.com/pythonbrad/afrim", rev = "5f40469" }
indexmap = { version = "2.2.6", features = ["serde"] }
toml = "0.8.12"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size
